--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^2.2.3",
+    "fs-extra": "^9.0.1",
     "tslib": "^1.14.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
     "@oclif/test": "^1.2.8",
     "@types/chai": "^4.2.14",
+    "@types/fs-extra": "^9.0.6",
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.17.50",
     "chai": "^4.2.0",
