--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
-    "@oclif/plugin-help": "^2.2.3",
+    "@oclif/plugin-help": "^3.2.1",
+    "tslib": "^1.14.1",
     "fs-extra": "^9.0.1",
-    "ts-md5": "^1.2.7",
-    "tslib": "^1.14.1"
+    "ts-md5": "^1.2.7"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
@@ -27,7 +27,7 @@
     "eslint-config-oclif": "^3.1.0",
     "eslint-config-oclif-typescript": "^0.1.0",
     "globby": "^10.0.2",
-    "mocha": "^8.2.1",
+    "mocha": "^5.2.0",
     "nyc": "^14.1.1",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
